--- a/02_flowers.ipynb
+++ b/02_flowers.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,32 +23,32 @@
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.applications.efficientnet import EfficientNetB3\n",
     "from tensorflow.keras import layers\n",
-    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.optimizers import Adamax\n",
     "\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                              file_path   label\n",
-      "0      [flower_photos/roses/16209331331_343c899d38.jpg]   roses\n",
-      "1       [flower_photos/roses/5777669976_a205f61e5b.jpg]   roses\n",
-      "2     [flower_photos/roses/4860145119_b1c3cbaa4e_n.jpg]   roses\n",
-      "3      [flower_photos/roses/15011625580_7974c44bce.jpg]   roses\n",
-      "4     [flower_photos/roses/17953368844_be3d18cf30_m....   roses\n",
-      "...                                                 ...     ...\n",
-      "3665    [flower_photos/tulips/134143359_71fa8dd9a4.jpg]  tulips\n",
-      "3666   [flower_photos/tulips/3637371174_a8dfcc1b35.jpg]  tulips\n",
-      "3667  [flower_photos/tulips/6948239566_0ac0a124ee_n....  tulips\n",
-      "3668   [flower_photos/tulips/2834890466_1cf220fba1.jpg]  tulips\n",
-      "3669  [flower_photos/tulips/13953090784_0c7d7a904e.jpg]  tulips\n",
+      "                                             file_path   label\n",
+      "0       flower_photos/roses/16209331331_343c899d38.jpg   roses\n",
+      "1        flower_photos/roses/5777669976_a205f61e5b.jpg   roses\n",
+      "2      flower_photos/roses/4860145119_b1c3cbaa4e_n.jpg   roses\n",
+      "3       flower_photos/roses/15011625580_7974c44bce.jpg   roses\n",
+      "4     flower_photos/roses/17953368844_be3d18cf30_m.jpg   roses\n",
+      "...                                                ...     ...\n",
+      "3665     flower_photos/tulips/134143359_71fa8dd9a4.jpg  tulips\n",
+      "3666    flower_photos/tulips/3637371174_a8dfcc1b35.jpg  tulips\n",
+      "3667  flower_photos/tulips/6948239566_0ac0a124ee_n.jpg  tulips\n",
+      "3668    flower_photos/tulips/2834890466_1cf220fba1.jpg  tulips\n",
+      "3669   flower_photos/tulips/13953090784_0c7d7a904e.jpg  tulips\n",
       "\n",
       "[3670 rows x 2 columns]\n"
      ]
@@ -60,10 +60,212 @@
     "    label = dir.split(\"/\")[-1]\n",
     "    for file in files:\n",
     "        path = os.path.join(dir, file)\n",
-    "        data.append([[path], label])\n",
+    "        data.append([path, label])\n",
     "\n",
     "df = pd.DataFrame(data, columns=[\"file_path\", \"label\"])\n",
     "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datagen = ImageDataGenerator(\n",
+    "    validation_split = 0.2\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2936 validated image filenames belonging to 5 classes.\n",
+      "Found 734 validated image filenames belonging to 5 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_gen = datagen.flow_from_dataframe(\n",
+    "    dataframe = df,\n",
+    "    x_col = \"file_path\",\n",
+    "    y_col = \"label\",\n",
+    "    target_size = (224, 224),\n",
+    "    color_mode = \"rgb\",\n",
+    "    batch_size = 32,\n",
+    "    class_mode = \"categorical\",\n",
+    "    shuffle = True,\n",
+    "    subset = \"training\"\n",
+    ")\n",
+    "\n",
+    "valid_gen = datagen.flow_from_dataframe(\n",
+    "    dataframe = df,\n",
+    "    x_col = \"file_path\",\n",
+    "    y_col = \"label\",\n",
+    "    target_size = (224, 224),\n",
+    "    color_mode = \"rgb\",\n",
+    "    batch_size = 32,\n",
+    "    class_mode = \"categorical\",\n",
+    "    shuffle = True,\n",
+    "    subset = \"validation\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_model = EfficientNetB3(\n",
+    "    include_top = False, \n",
+    "    weights = \"imagenet\",\n",
+    "    input_shape = (224, 224, 3), \n",
+    "    pooling = \"max\"\n",
+    ")\n",
+    "\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    base_model,\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.Dense(256, activation = \"relu\"),\n",
+    "    layers.Dropout(rate=.45, seed = 123),\n",
+    "    layers.Dense(5, activation = \"softmax\")\n",
+    "])\n",
+    "\n",
+    "\n",
+    "model.compile(\n",
+    "    Adamax(learning_rate = .0001), \n",
+    "    loss = \"categorical_crossentropy\",\n",
+    "    metrics = [\n",
+    "        \"acc\", \n",
+    "        tf.keras.metrics.Precision(), \n",
+    "        tf.keras.metrics.Recall(), \n",
+    "        tf.keras.metrics.AUC()\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "early_stopping = EarlyStopping(\n",
+    "    patience = 10,\n",
+    "    min_delta = 0,\n",
+    "    monitor = \"val_loss\",\n",
+    "    verbose = 0,\n",
+    "    restore_best_weights = True,\n",
+    "    baseline = None\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Cohort23/Library/Python/3.10/lib/python/site-packages/keras/src/trainers/data_adapters/py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "  self._warn_if_super_not_called()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m298s\u001b[0m 3s/step - acc: 0.3849 - auc_3: 0.6933 - loss: 1.7641 - precision_3: 0.4402 - recall_3: 0.3083 - val_acc: 0.1131 - val_auc_3: 0.4678 - val_loss: 2.9161 - val_precision_3: 0.1170 - val_recall_3: 0.0899\n",
+      "Epoch 2/5\n",
+      "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m275s\u001b[0m 3s/step - acc: 0.7245 - auc_3: 0.9320 - loss: 0.7460 - precision_3: 0.7955 - recall_3: 0.6702 - val_acc: 0.1185 - val_auc_3: 0.4397 - val_loss: 3.7314 - val_precision_3: 0.1214 - val_recall_3: 0.1076\n",
+      "Epoch 3/5\n",
+      "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m284s\u001b[0m 3s/step - acc: 0.8245 - auc_3: 0.9682 - loss: 0.5019 - precision_3: 0.8639 - recall_3: 0.7775 - val_acc: 0.1185 - val_auc_3: 0.4212 - val_loss: 4.1649 - val_precision_3: 0.1241 - val_recall_3: 0.1131\n",
+      "Epoch 4/5\n",
+      "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m278s\u001b[0m 3s/step - acc: 0.8758 - auc_3: 0.9831 - loss: 0.3596 - precision_3: 0.9132 - recall_3: 0.8452 - val_acc: 0.1172 - val_auc_3: 0.4104 - val_loss: 4.5197 - val_precision_3: 0.1224 - val_recall_3: 0.1131\n",
+      "Epoch 5/5\n",
+      "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m278s\u001b[0m 3s/step - acc: 0.8883 - auc_3: 0.9878 - loss: 0.3061 - precision_3: 0.9220 - recall_3: 0.8608 - val_acc: 0.1172 - val_auc_3: 0.3998 - val_loss: 4.9443 - val_precision_3: 0.1223 - val_recall_3: 0.1144\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x158085570>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(\n",
+    "    train_gen,\n",
+    "    validation_data = valid_gen,\n",
+    "    epochs = 5,\n",
+    "    validation_steps = None,\n",
+    "    shuffle = False,\n",
+    "    callbacks = early_stopping,\n",
+    "    verbose = 1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"flowers.keras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n",
+      "Your flower is a:  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "from tensorflow.keras.saving import load_model\n",
+    "import numpy as np\n",
+    "\n",
+    "model = load_model(\"flowers.keras\")\n",
+    "\n",
+    "\n",
+    "input_image = cv2.imread(\"flower_photos/tulips/489506904_9b68ba211c.jpg\")\n",
+    "input_image_resize = cv2.resize(input_image, (224, 224))\n",
+    "\n",
+    "input_image_scaled = input_image_resize/225\n",
+    "image_reshapped = np. reshape(input_image_scaled, [1, 224, 224, 3])\n",
+    "\n",
+    "input_prediction = model.predict(image_reshapped)\n",
+    "\n",
+    "\n",
+    "print(\"Your flower is a: \", np.argmax(input_prediction))"
    ]
   },
   {
